--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,10 +57,15 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   solar_icons: ^0.0.5
   square_percent_indicater: ^0.1.0
+  timelines_plus: ^1.0.7
   timezone: ^0.10.1
   turf: ^0.0.10
   url_launcher: ^6.3.2
   wakelock_plus: ^1.3.2
+  horizontal_week_calendar: 
+    git:
+      ref: main
+      url: https://github.com/alheekmahlib/horizontal_week_calendar.git
 
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -123,7 +128,6 @@ flutter:
         - asset: assets/fonts/Cairo-Medium.ttf
           weight: 500
         - asset: assets/fonts/Cairo-Regular.ttf
-    
   # fonts:
   #   - family: Schyler
   #     fonts:
