add settings screen & about app & our apps

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -113,6 +113,7 @@ flutter:
     - assets/svg/logo/
     - assets/svg/home/
     - assets/svg/prayer/
+    - assets/svg/theme/
     - assets/images/
     - assets/svg/hijri/
     - assets/json/
