--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,15 +44,24 @@ dependencies:
   get_it: ^8.2.0
   get_storage: ^2.1.1
   hijri_calendar: ^1.0.7+7
+  horizontal_week_calendar:
+    git:
+      ref: main
+      url: https://github.com/alheekmahlib/horizontal_week_calendar.git
+  google_huawei_availability:
+    git:
+      ref: dev
+      url: https://github.com/alheekmahlib/google_huawei_availability.git
+  huawei_location: ^6.14.2+301
   intl: ^0.19.0
   just_audio: ^0.10.4
   latlong2: ^0.9.1
   lottie: ^3.3.1
-  screenshot: ^3.0.0
   nominatim_geocoding: ^0.0.6
   path: ^1.9.0
   path_provider: ^2.1.5
   rate_my_app: ^2.3.2
+  screenshot: ^3.0.0
   share_plus: ^11.0.0
   slide_countdown: ^2.0.2
   smooth_page_indicator: ^1.2.1
@@ -63,10 +72,6 @@ dependencies:
   turf: ^0.0.10
   url_launcher: ^6.3.2
   wakelock_plus: ^1.3.2
-  horizontal_week_calendar: 
-    git:
-      ref: main
-      url: https://github.com/alheekmahlib/horizontal_week_calendar.git
 
 dev_dependencies:
   flutter_lints: ^5.0.0
