--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,10 +2,11 @@ plugins {
     id "com.android.application"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
+    id "com.huawei.agconnect"
 }
 
 android {
-    namespace = "com.example.almasjid"
+    namespace = "com.alheekmah.aqimApp"
     compileSdk = 36 // flutter.compileSdkVersion
     ndkVersion = "27.0.12077973" // flutter.ndkVersion
 
@@ -28,7 +29,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.almasjid"
+        applicationId = "com.alheekmah.aqimApp"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 24 // flutter.minSdkVersion
