--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,10 @@ dependencies:
       ref: main
       url: https://github.com/alheekmahlib/horizontal_week_calendar.git
   huawei_location: ^6.14.2+301
+  # huawei_map:
+  #   git:
+  #     ref: main
+  #     url: https://github.com/alheekmahlib/flutter-hms-map.git
   huawei_site: ^6.5.1+303
   intl: ^0.20.2
   just_audio: ^0.10.5
