--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -14,6 +14,8 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
+    <key>CFBundleDisplayName</key>
+    <string>أقم - مكتبة الحكمة</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -30,8 +32,8 @@
 	<string>NSApplication</string>
 	<key>NSLocationUsageDescription</key>
 	<string>This app needs access to location.</string>
-	<key>com.apple.security.personal-information.location</key>
-	<true/>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>We use your location to show accurate prayer times and Qibla direction.</string>
 	<key>NSLocationTemporaryUsageDescriptionDictionary</key>
 	<dict>
   		<key>Location</key>
