--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   adhan: ^2.0.0+1
   archive: ^4.0.7
   awesome_notifications: ^0.10.1
-  background_fetch: ^1.4.0
+  background_fetch: ^1.5.0
   badges: ^3.1.2
   bot_toast: ^4.1.3
   connectivity_plus: ^7.0.0
@@ -27,37 +27,34 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_cache_manager: ^3.4.1
-  flutter_compass_v2: ^1.0.3
+  sensors_plus: ^6.1.1
   flutter_launcher_icons: ^0.14.4
   flutter_localizations:
     sdk: flutter
   flutter_map: ^8.2.2
-  flutter_native_splash: ^2.4.6
+  flutter_native_splash: ^2.4.7
   flutter_rounded_progress_bar: ^0.3.2
   flutter_screenutil: ^5.9.3
-  flutter_svg: ^2.2.1
-  flutter_timezone: ^5.0.0
+  flutter_svg: ^2.2.2
+  flutter_timezone: ^5.0.1
   gap: ^3.0.1
   gauge_indicator: ^0.4.3
   geocoding: ^4.0.0
   geolocator: ^14.0.2
   get: ^4.7.2
-  get_it: ^8.2.0
+  get_it: ^9.0.5
   get_storage: ^2.1.1
   google_huawei_availability:
     git:
       ref: dev
       url: https://github.com/alheekmahlib/google_huawei_availability.git
   hijri_date: ^1.0.0
+  home_widget: ^0.8.1
   horizontal_week_calendar:
     git:
       ref: main
       url: https://github.com/alheekmahlib/horizontal_week_calendar.git
-  huawei_location: ^6.14.2+301
-  # huawei_map:
-  #   git:
-  #     ref: main
-  #     url: https://github.com/alheekmahlib/flutter-hms-map.git
+  huawei_location: ^6.16.0+300
   huawei_site: ^6.5.1+303
   intl: ^0.20.2
   just_audio: ^0.10.5
@@ -69,7 +66,7 @@ dependencies:
   path_provider: ^2.1.5
   rate_my_app: ^2.3.2
   screenshot: ^3.0.0
-  share_plus: ^12.0.0
+  share_plus: ^12.0.1
   slide_countdown: ^2.0.2
   smooth_page_indicator: ^1.2.1
   solar_icons: ^0.0.5
