Add: Android Prayer home widget

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -125,4 +125,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.window:window:1.0.0'
     implementation 'androidx.window:window-java:1.0.0'
+    // Render SVG assets (Hijri month icons) inside AppWidget
+    implementation 'com.caverock:androidsvg:1.4'
 }
