--- a/ios/Runner/Runner.entitlements
+++ b/ios/Runner/Runner.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.alheekmah.aqimApp.prayer-widgetExtension</string>
+		<string>group.alheekmah.aqimApp.prayerWidget</string>
 	</array>
 </dict>
 </plist>
