--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   background_fetch: ^1.5.0
   badges: ^3.1.2
   bot_toast: ^4.1.3
+  compassx: ^1.0.1
   connectivity_plus: ^7.0.0
   cupertino_icons: ^1.0.8
   dio: ^5.9.0
@@ -27,7 +28,6 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_cache_manager: ^3.4.1
-  sensors_plus: ^6.1.1
   flutter_launcher_icons: ^0.14.4
   flutter_localizations:
     sdk: flutter
