--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: almasjid
-description: "A new Flutter project."
+description: "A Prayer and qibla application."
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.3+4
+version: 1.1.0+5
 
 environment:
   sdk: ^3.6.1
@@ -74,6 +74,10 @@ dependencies:
   timezone: ^0.10.1
   turf: ^0.0.10
   url_launcher: ^6.3.2
+  arabic_justified_text:
+    git:
+      ref: main
+      url: https://github.com/AhmedAlboishe/arabic_justified_text.git
 
 dev_dependencies:
   flutter_lints: ^5.0.0
