--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,11 @@ environment:
 
 dependencies:
   adhan: ^2.0.0+1
+  arabic_justified_text: ^1.0.2
+    # git:
+    #   ref: main
+    #   url: https://github.com/AhmedAlboishe/arabic_justified_text.git
   archive: ^4.0.7
-  awesome_notifications: ^0.10.1
   background_fetch: ^1.5.0
   badges: ^3.1.2
   bot_toast: ^4.1.3
@@ -27,22 +30,24 @@ dependencies:
   floaty_nav_bar: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_app_info: ^3.0.3
   flutter_cache_manager: ^3.4.1
   flutter_launcher_icons: ^0.14.4
+  flutter_local_notifications: ^18.0.1
   flutter_localizations:
     sdk: flutter
   flutter_map: ^8.2.2
   flutter_native_splash: ^2.4.7
   flutter_rounded_progress_bar: ^0.3.2
   flutter_screenutil: ^5.9.3
-  flutter_svg: ^2.2.2
+  flutter_svg: ^2.2.3
   flutter_timezone: ^5.0.1
   gap: ^3.0.1
   gauge_indicator: ^0.4.3
   geocoding: ^4.0.0
   geolocator: ^14.0.2
-  get: ^4.7.2
-  get_it: ^9.0.5
+  get: ^4.7.3
+  get_it: ^9.2.0
   get_storage: ^2.1.1
   google_huawei_availability:
     git:
@@ -61,23 +66,19 @@ dependencies:
   latlong2: ^0.9.1
   lottie: ^3.3.2
   nominatim_geocoding: ^0.0.6
-  package_rename: ^1.10.0
+  package_rename: ^1.10.1
   path: ^1.9.1
   path_provider: ^2.1.5
   rate_my_app: ^2.3.2
   screenshot: ^3.0.0
   share_plus: ^12.0.1
   slide_countdown: ^2.0.2
-  smooth_page_indicator: ^1.2.1
+  smooth_page_indicator: ^2.0.1
   solar_icons: ^0.0.5
   square_percent_indicater: ^0.1.0
   timezone: ^0.10.1
   turf: ^0.0.10
   url_launcher: ^6.3.2
-  arabic_justified_text:
-    git:
-      ref: main
-      url: https://github.com/AhmedAlboishe/arabic_justified_text.git
 
 dev_dependencies:
   flutter_lints: ^5.0.0
