--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "A Prayer and qibla application."
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.1.0+5
+version: 1.2.1+7
 
 environment:
   sdk: ^3.6.1
@@ -11,10 +11,8 @@ environment:
 dependencies:
   adhan: ^2.0.0+1
   arabic_justified_text: ^1.0.2
-    # git:
-    #   ref: main
-    #   url: https://github.com/AhmedAlboishe/arabic_justified_text.git
   archive: ^4.0.7
+  awesome_notifications: ^0.10.1
   background_fetch: ^1.5.0
   badges: ^3.1.2
   bot_toast: ^4.1.3
@@ -33,7 +31,6 @@ dependencies:
   flutter_app_info: ^3.0.3
   flutter_cache_manager: ^3.4.1
   flutter_launcher_icons: ^0.14.4
-  flutter_local_notifications: ^18.0.1
   flutter_localizations:
     sdk: flutter
   flutter_map: ^8.2.2
