--- a/macos/Runner/DebugProfile.entitlements
+++ b/macos/Runner/DebugProfile.entitlements
@@ -14,5 +14,7 @@
 	<!-- Optional: allow outbound network connections for geocoding/services in debug -->
 	<key>com.apple.security.network.client</key>
 	<true/>
+  <key>com.apple.security.personal-information.location</key>
+  <true/>
 </dict>
 </plist>
