--- a/macos/Runner/Release.entitlements
+++ b/macos/Runner/Release.entitlements
@@ -10,5 +10,7 @@
 	<!-- Optional: allow outbound network connections for geocoding/services in release -->
 	<key>com.apple.security.network.client</key>
 	<true/>
+  <key>com.apple.security.personal-information.location</key>
+  <true/>
 </dict>
 </plist>
