--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   background_fetch: ^1.5.0
   badges: ^3.1.2
   bot_toast: ^4.1.3
+  bubble_lens: ^2.0.0
   compassx: ^1.0.1
   connectivity_plus: ^7.0.0
   cupertino_icons: ^1.0.8
@@ -70,6 +71,7 @@ dependencies:
   screenshot: ^3.0.0
   share_plus: ^12.0.1
   slide_countdown: ^2.0.2
+  sliding_panel_kit: ^0.3.0
   smooth_page_indicator: ^2.0.1
   solar_icons: ^0.0.5
   square_percent_indicater: ^0.1.0
